--- a/ranger/history
+++ b/ranger/history
@@ -1,7 +1,3 @@
-rename westworld
-rename sherlock
-rename the_hobbit
-rename the_lord_of_the_rings
 rename mcu
 rename house_of_cards
 rename 2018-10-03-id.pdf
@@ -47,4 +43,8 @@ rename fish_prompt.fish
 w
 search sw10
 search npm
+search lukas
+rename lukasm-eliash.txt
+rename lukasm-marieke.txt
+rename lukasm-jannes.txt
 
